<resources>
    <string name="app_name">YuGiOh Cart</string>

    <string name="my_cart">My Cart</string>

    <string name="my_collection">My Collection</string>

    <string name="card_search">Search cards</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="conditions">
        <item>Mint (M)</item>
        <item>Near Mint (NM)</item>
        <item>Lightly Played (LP)</item>
        <item>Played (P)</item>
        <item>Heavily Played (HP)</item>
    </string-array>

    <string-array name="rarities">
        <item>C</item>
        <item>R</item>
        <item>SR</item>
        <item>HFR</item>
        <item>UR</item>
        <item>UtR</item>
        <item>ScR</item>
        <item>UScr</item>
        <item>ScUR</item>
        <item>PScR</item>
        <item>GR</item>
        <item>PR</item>
        <item>PC</item>
        <item>SPR</item>
        <item>UPR</item>
        <item>GUR</item>
    </string-array>

    <string-array name="currency">
        <item>Euro</item>
        <item>Dollar</item>
    </string-array>

    <string-array name="currency_values">
        <item>€</item>
        <item>$</item>
    </string-array>

    <string name="pref_currency_key" translatable="false">currency</string>

    <string name="pref_currency">Currency</string>

    <string name="pref_currency_def_value">€</string>

    <string name="action_settings">Settings</string>

    <string name="action_download">Download Cards</string>

    <string name="saved_usdeur">usdeur</string>

    <string name="action_currency">Latest Currency</string>

    <string name="collection_button_title">Add to collection</string>

    <string name="cart_button_title">Add to cart</string>

    <string name="quantity_tv_text">Quantity:</string>

    <string name="quantity_et_text">1</string>

    <string name="price_tv_text">Price:</string>

    <string name="price_et_text">1.00</string>

    <string name="currency_tv_text">Currency:</string>

    <string name="condition_tv_text">Condition:</string>

    <string name="rarity_tv_text">Rarity:</string>

    <string name="add_btn_text">Add</string>

    <string name="dismiss_btn_text">Dismiss</string>

    <string name="retry_tv_text">There is no internet connection. Please activate wifi or mobile data to download the essential data.</string>

    <string name="autocomplete_et_hint">Card name...</string>

    <string name="action_share">Share</string>

</resources>
