<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ListPreference
        android:key="@string/pref_currency_key"
        android:title="@string/pref_currency"
        android:defaultValue="@string/pref_currency_def_value"
        android:entries="@array/currency"
        android:entryValues="@array/currency_values"/>

    <PreferenceCategory
        android:summary="..."
        android:title="Collection settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_prices"
            android:summary="Show/hide card prices"
            android:title="Show prices"/>

    </PreferenceCategory>

</PreferenceScreen>