<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ddd"
    android:alpha="0.95">

    <TextView
        android:id="@+id/card_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_tv_text"
            android:layout_weight="0.25"/>

        <EditText
            android:id="@+id/quantity_tv"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/quantity_et_text"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_weight="0.75"
            android:focusable="true"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_tv_text"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/price_tv"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/price_et_text"
            android:textAlignment="center"
            android:layout_weight="0.1"
            android:maxWidth="70dp"
            android:focusable="true"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_tv_text"/>

        <Spinner
            android:id="@+id/currency_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/currency"
            android:spinnerMode="dialog"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition_tv_text"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/condition_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/conditions"
            android:spinnerMode="dialog"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rarity_tv_text"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/rarity_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/rarities"
            android:spinnerMode="dialog"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="add"
            android:textAllCaps="false"
            android:text="@string/add_btn_text"/>

        <Button
            android:id="@+id/dismiss_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="dismissPopup"
            android:textAllCaps="false"
            android:text="@string/dismiss_btn_text"/>

    </LinearLayout>

</LinearLayout>